[gd_scene load_steps=16 format=3 uid="uid://d2lp807opt751"]

[ext_resource type="TileSet" uid="uid://cu6s4yheju23g" path="res://TileSet.tres" id="1_pirjs"]
[ext_resource type="Script" path="res://scripts/tile_map.gd" id="2_shi24"]
[ext_resource type="PackedScene" uid="uid://jetiech2pdka" path="res://scenes/Player.tscn" id="3_781yi"]
[ext_resource type="PackedScene" uid="uid://4clkf8r3lajx" path="res://scenes/UI.tscn" id="4_5y83f"]
[ext_resource type="PackedScene" uid="uid://1u6lg0vfp8u7" path="res://scenes/PauseController.tscn" id="5_6xb7w"]
[ext_resource type="Script" path="res://scripts/boss.gd" id="6_ulw8p"]
[ext_resource type="Texture2D" uid="uid://chm84rpc670vo" path="res://assets/marta/steady.png" id="7_fsjso"]
[ext_resource type="Texture2D" uid="uid://b1xrbopsfx278" path="res://assets/marta/walk_right.png" id="8_ht2or"]
[ext_resource type="Texture2D" uid="uid://dd8m631cia6nw" path="res://assets/marta/walk_left.png" id="9_2tkpu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5o0aw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_fsjso")
}],
"loop": true,
"name": &"roll",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_ht2or")
}, {
"duration": 1.0,
"texture": ExtResource("7_fsjso")
}, {
"duration": 1.0,
"texture": ExtResource("9_2tkpu")
}, {
"duration": 1.0,
"texture": ExtResource("7_fsjso")
}],
"loop": true,
"name": &"spell",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mam04"]
size = Vector2(75.9684, 50.8416)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_45rj6"]
a = Vector2(-30, -52)
b = Vector2(-30, 52)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_lxg14"]
a = Vector2(30, -52)
b = Vector2(30, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k8r2e"]
size = Vector2(74, 0.730461)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7xbmj"]
size = Vector2(6.83021, 4.84311)

[node name="BossFight" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_pirjs")
format = 2
layer_0/tile_data = PackedInt32Array(0, 131072, 1, 65536, 131072, 1, 131072, 131072, 1, 196608, 131072, 1, 5, 65536, 0, 65541, 65536, 1, 131077, 65536, 1, 196613, 65536, 1, 6, 65536, 0, 65542, 65536, 1, 131078, 65536, 1, 196614, 65536, 1, 7, 65536, 0, 65543, 65536, 1, 131079, 65536, 1, 196615, 65536, 1, 8, 65536, 0, 65544, 65536, 1, 131080, 65536, 1, 196616, 65536, 1, 9, 65536, 0, 65545, 65536, 1, 131081, 65536, 1, 196617, 65536, 1, 10, 65536, 0, 65546, 65536, 1, 131082, 65536, 1, 196618, 65536, 1, 11, 65536, 0, 65547, 65536, 1, 131083, 65536, 1, 196619, 65536, 1, 12, 65536, 0, 65548, 65536, 1, 131084, 65536, 1, 196620, 65536, 1, 13, 65536, 0, 65549, 65536, 1, 131085, 65536, 1, 196621, 65536, 1, 14, 65536, 0, 65550, 65536, 1, 131086, 65536, 1, 196622, 65536, 1, 15, 65536, 0, 65551, 65536, 1, 131087, 65536, 1, 196623, 65536, 1, 16, 65536, 0, 65552, 65536, 1, 131088, 65536, 1, 196624, 65536, 1, 17, 65536, 0, 65553, 65536, 1, 131089, 65536, 1, 196625, 65536, 1, 22, 65536, 0, 65558, 65536, 1, 131094, 65536, 1, 196630, 65536, 1, -1048576, 131072, 1, -983040, 131072, 1, -917504, 131072, 1, -851968, 131072, 1, -786432, 131072, 1, -720896, 131072, 1, -655360, 131072, 1, -589824, 131072, 1, -524288, 131072, 1, -458752, 131072, 1, -393216, 131072, 1, -327680, 131072, 1, -262144, 131072, 1, -196608, 131072, 1, -131072, 131072, 1, -65536, 131072, 1, 18, 65536, 0, 65554, 65536, 1, 131090, 65536, 1, 196626, 65536, 1, 19, 65536, 0, 65555, 65536, 1, 131091, 65536, 1, 196627, 65536, 1, 20, 65536, 0, 65556, 65536, 1, 131092, 65536, 1, 196628, 65536, 1, 21, 65536, 0, 65557, 65536, 1, 131093, 65536, 1, 196629, 65536, 1, 23, 65536, 0, 65559, 65536, 1, 131095, 65536, 1, 196631, 65536, 1, 24, 65536, 0, 65560, 65536, 1, 131096, 65536, 1, 196632, 65536, 1, 25, 65536, 0, 65561, 65536, 1, 131097, 65536, 1, 196633, 65536, 1, 26, 65536, 0, 65562, 65536, 1, 131098, 65536, 1, 196634, 65536, 1, -1048545, 131072, 1, -983009, 131072, 1, -917473, 131072, 1, -851937, 131072, 1, -786401, 131072, 1, -720865, 131072, 1, -655329, 131072, 1, -589793, 131072, 1, -524257, 131072, 1, -458721, 131072, 1, -393185, 131072, 1, -327649, 131072, 1, -262113, 131072, 1, -196577, 131072, 1, -131041, 131072, 1, -65505, 131072, 1, 31, 131072, 1, 65567, 131072, 1, 131103, 131072, 1, 196639, 131072, 1)
script = ExtResource("2_shi24")

[node name="Player" parent="." instance=ExtResource("3_781yi")]
position = Vector2(501, -36)

[node name="HP" parent="." instance=ExtResource("4_5y83f")]

[node name="PauseController" parent="." instance=ExtResource("5_6xb7w")]

[node name="Boss" type="CharacterBody2D" parent="."]
position = Vector2(1500, -28)
script = ExtResource("6_ulw8p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Boss"]
position = Vector2(4.23516e-22, -8)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_5o0aw")
animation = &"roll"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss"]
scale = Vector2(1.07885, 1.08545)
shape = SubResource("RectangleShape2D_mam04")

[node name="SideCollision" type="Area2D" parent="Boss"]
scale = Vector2(1, 0.5)
collision_layer = 128
collision_mask = 2

[node name="LeftCollision" type="CollisionShape2D" parent="Boss/SideCollision"]
scale = Vector2(1.51592, 0.989542)
shape = SubResource("SegmentShape2D_45rj6")

[node name="RightCollision" type="CollisionShape2D" parent="Boss/SideCollision"]
scale = Vector2(1.52, 0.919296)
shape = SubResource("SegmentShape2D_lxg14")

[node name="TopCollision" type="Area2D" parent="Boss"]
scale = Vector2(1, 1.36)
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss/TopCollision"]
position = Vector2(0, -23.5294)
scale = Vector2(1.01712, 3.2786)
shape = SubResource("RectangleShape2D_k8r2e")

[node name="EdgeSpotter" type="Area2D" parent="Boss"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss/EdgeSpotter"]
position = Vector2(-27, 32.067)
scale = Vector2(1.36596, 0.85357)
shape = SubResource("RectangleShape2D_7xbmj")

[connection signal="body_entered" from="Boss/SideCollision" to="Boss" method="_on_side_collision"]
[connection signal="body_entered" from="Boss/TopCollision" to="Boss" method="_on_top_collision"]
[connection signal="body_exited" from="Boss/EdgeSpotter" to="Boss" method="_on_edge"]
